# FreePass

./: .gitignore  CLAUDE.md  CRYPTO_SPEC.md  DESIGN.md  PLAN.md  README.md  RELEASING.md  SECURITY.md  THREAT_MODEL.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/agents/: briefer.md  developer.md  frontend.md  plan-keeper.md  release.md  security-reviewer.md  ship.md  tester.md
.github/workflows/: release.yml
extension/: README.md  manifest.json  popup.html  popup.js
scripts/: bump-version.mjs  render-icon.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_vault.sql  002_environments_entries.sql  003_channel_token.sql  004_projects.sql
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: db.rs  entries.rs  environments.rs  generator.rs  mod.rs  projects.rs  vault.rs
src-tauri/src/crypto/: aead.rs  error.rs  kdf.rs  keys.rs  mod.rs
src-tauri/src/db/: connection.rs  mod.rs
src-tauri/src/models/: entry.rs  mod.rs  project.rs
src-tauri/src/services/: entries.rs  environments.rs  favicon.rs  generator.rs  local_channel.rs  mod.rs  projects.rs  vault.rs
src-tauri/tests/: functional_edge_cases.rs  migrations_invariants.rs
src/components/: ArchivedEntries.tsx  CommandPalette.tsx  ConfirmDialog.tsx  DuplicateToEnvironment.tsx  EntryDetail.tsx  EntryForm.tsx  EnvironmentSelector.tsx  ExtensionPairing.tsx  ImportCsv.tsx  Modal.tsx  PasswordGenerator.tsx  ProjectsManager.tsx  Titlebar.tsx  ui.tsx  (+1 more)
(+12 files in other folders)
