[package]
name = "freepass"
version = "0.1.0"
description = "Local-first, mono-user password manager"
authors = ["Olivier Besnard"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "freepass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono", "uuid"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

# === Crypto (CRYPTO_SPEC.md) — RustCrypto pur, aucune dépendance C ===
# Argon2id (KDF du mot de passe maître), XChaCha20-Poly1305 (AEAD au repos),
# zeroize (effacement mémoire des clés/plaintexts), rand (CSPRNG OS via OsRng).
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
